feat(backend): adiciona filtro de tons de cinza e corrige compatibilidade JDK 8